Got inter-node communication working - own serialization implementation (pretty sketchy ngl) - switch to using ip addrs for node ids rather than socket addrs to omit port info so communication actually works - needed to add net2 as a dependency so I can actually check the networking code actually works (big sad)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2018"
 [dependencies]
 libc = "0.2.68"
 
+[dev-dependencies]
+net2 = "0.2.33"
+
 [[example]]
 name = "tcp_mvp"
 path = "src/examples/tcp_mvp/main.rs"
